# GitPRTriageEnv

./: .gitignore  Blog.MD  Dockerfile  README.md  ResultsDashboard.jsx  app.py  build_grpo_dataset.py  client.py  collect_baseline.py  collect_post_training.py  eval_logs.txt  grpo_dataset.jsonl  hfblog.md  inference.py  models.py  openenv.yaml  push_dataset_jsonl.py  requirements.txt  switch_workspace.py  test_guards_smoke.py  train.py  train_v2.py  upload_app.py  upload_rsd_space.py  upload_space.py
data/: issues.json
evaluation/: generate_plots.py
evaluation/grpo_dataset/: data-00000-of-00001.arrow  dataset_card.json  dataset_info.json  state.json
evaluation/post_training/: trained_summary.json
evaluation/pre_training/: baseline_results.json  baseline_summary.json
gitprtriage_env/: README.md  inference.py  pyproject.toml
gitprtriage_env/agents/: __init__.py  base.py  orchestrator.py  specialists.py
gitprtriage_env/data/: issues.json  prs.json
gitprtriage_env/dev_triage_env.egg-info/: PKG-INFO  SOURCES.txt
gitprtriage_env/server/: app.py  curriculum.py  environment.py  guards.py
prevaluation_env/: Dockerfile  README.md  __init__.py  inference.py  models.py  openenv.yaml  pyproject.toml  pyrightconfig.json  requirements.txt  validate-submission.sh
prevaluation_env/agents/: __init__.py  base.py  orchestrator.py  specialists.py
prevaluation_env/dev_triage_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  (+1 more)
scripts/: upload_rsd_space.py
server/: app.py  environment.py
training/: __init__.py  grpo_training.ipynb  reward_fn.py  upload_results.py
(+5 files in other folders)
