[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dev-triage-env"
version = "0.1.0"
description = "A GitHub issue triage environment for the Meta x Scaler OpenEnv Hackathon 2026."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "python-dotenv",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
